// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ListCommand displays title and command list 1`] = `
[
  {
    "h1": "Available commands",
  },
  {
    "dl": {
      "items": [
        {
          "definition": "Do bar things",
          "label": "bar",
        },
        {
          "definition": "Do foo things",
          "label": "foo",
        },
        {
          "definition": "List all available commands",
          "label": "list",
        },
        {
          "definition": "Exercise CLI features for manual testing",
          "label": "testbed",
        },
      ],
    },
  },
]
`;

exports[`ListCommand is the default command when no args provided 1`] = `
[
  {
    "h1": "Available commands",
  },
  {
    "dl": {
      "items": [
        {
          "definition": "List all available commands",
          "label": "list",
        },
        {
          "definition": "Exercise CLI features for manual testing",
          "label": "testbed",
        },
      ],
    },
  },
]
`;

exports[`ListCommand commands are listed in alphabetical order 1`] = `
[
  {
    "h1": "Available commands",
  },
  {
    "dl": {
      "items": [
        {
          "definition": "A command",
          "label": "alpha",
        },
        {
          "definition": "List all available commands",
          "label": "list",
        },
        {
          "definition": "Exercise CLI features for manual testing",
          "label": "testbed",
        },
        {
          "definition": "Z command",
          "label": "zebra",
        },
      ],
    },
  },
]
`;
